Bugfix.
Removed IObjects